article of productivity tools

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -111,13 +111,16 @@
             <div class="project">
                 <h3>WaveSound - an audio converter</h3>
                 <p>WaveSound is capable to convert SoundCloud soundtracks to file formats like MP3 or Windows Wavesound</p>
-                <a href="https://github.com/EVLGT/EVLGT.WaveSound">GitHub Repository of WaveSound by EVLGT</a>
+                <a href="https://github.com/EVLGT/EVLGT.WaveSound" target="_blank">GitHub Repository of WaveSound by EVLGT</a>
             </div>
         </section>
         <section id="articles">
             <h2>Articles</h2>
             <div class="article-item">
                 <a href="">[de] Jahresrückblick 2023 (coming soon)</a>
+            </div>
+            <div class="article-item">
+                <a href="articles/productivity-tools.html">[en] Productivity Tools (12-11-2023)</a>
             </div>
         </section>
         <section id="contact">
