article: api-documentation

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -122,6 +122,9 @@
                 <a href="">[de] Jahresrückblick 2023 (coming soon)</a>
             </div>
             <div class="article-item">
+                <a href="articles/api-documentation.html">[en] API Documentation with Swagger/OpenAPI in ASP.NET (16-11-2023)</a>
+            </div>
+            <div class="article-item">
                 <a href="articles/importance-of-focus.html">[en] Importance of Focus (13-11-2023)</a>
             </div>
             <div class="article-item">
