--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -123,6 +123,9 @@
                 <a href="">[de] Jahresrückblick 2023 (coming soon)</a>
             </div>
             <div class="article-item">
+                <a href="articles/verlorenes-lernen.html">[de] Verlorenes Lernen: Das Versagen einer Schule (05-12-2023)</a>
+            </div>
+            <div class="article-item">
                 <a href="articles/api-documentation.html">[en] API Documentation with Swagger/OpenAPI in ASP.NET (16-11-2023)</a>
             </div>
             <div class="article-item">
