cleanup + article upload

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -120,7 +120,10 @@
         <section id="articles">
             <h2>Articles</h2>
             <div class="article-item">
-                <a href="">[de] Jahresrückblick 2023 (coming soon)</a>
+                <a href="">[de] Review 2023 (coming soon)</a>
+            </div>
+            <div class="article-item">
+                <a href="articles/efcore-documentation.html">[en] Entity Framework Core Documentation (09-12-2023)</a>
             </div>
             <div class="article-item">
                 <a href="articles/verlorenes-lernen.html">[de] Verlorenes Lernen: Das Versagen einer Schule (05-12-2023)</a>
