redesign and copyright 2024

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="#">dario krieger - developer</a>
+        <a href="#">dario krieger - full stack developer</a>
     </header>
 
     <main>
@@ -23,7 +23,7 @@
         <section id="about">
             <h2>About</h2>
             <p>
-                I'm underway on becoming a full stack developer by accomplishing an apprenticeship at Base-Net Informatik AG (member of FINNOFLEET).
+                I am currently engaged in an apprenticeship at Base-Net Informatik AG (a member of FINNOFLEET), working towards becoming a proficient full-stack developer.
             </p>
         </section>
 
@@ -100,7 +100,7 @@
             <ol class="timeline-list">
                 <li class="timeline-item">
                     <img src="src/assets/basenet.jpeg" alt="Base-Net Informatik AG" class="company-logo">
-                    <h4 class="h4 timeline-item-title">Apprentice Application Developer @ <a href="https://www.basenet.ch/">basenet.ch</a></h4>
+                    <h4 class="h4 timeline-item-title">Apprentice Application Developer @ <a href="https://www.basenet.ch/" target="_blank">basenet.ch</a></h4>
                     <span class="timeline-dates">Aug 2022 — Present</span>
                     <p class="timeline-text">
                         We enable credit management with maximum automation and efficiency across the entire credit cycle. Our modular solutions offer comprehensive services in the areas of credit initiation and account management, electronic pledge register management and the automation of credit and refinancing processes.
@@ -113,12 +113,12 @@
             <h2>Projects</h2>
             <div class="project">
                 <h3>WaveSound - an audio converter</h3>
-                <p>WaveSound is capable to convert SoundCloud soundtracks to file formats like MP3 or Windows Wavesound</p>
+                <p>WaveSound has the capability to convert SoundCloud and Spotify soundtracks into file formats such as MP3 or Windows Wavesound.</p>
                 <a href="https://github.com/EVLGT/EVLGT.WaveSound" target="_blank">GitHub Repository of WaveSound by EVLGT</a>
             </div>
         </section>
         <section id="articles">
-            <h2>Articles</h2>
+            <h2>Articles / Documents</h2>
             <div class="article-item">
                 <a href="src/articles/rueckblick-2023.html">[de] Rückblick 2023 (30-12-2023)</a>
             </div>
@@ -146,7 +146,7 @@
         </section>
     </main>
     <footer>
-        &copy; 2023 Dario Krieger
+        &copy; 2024 Dario Krieger
     </footer>
 </body>
 </html>
