imported older documents

--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
             <div class="article-item">
                 <a href="src/articles/productivity-tools.html">[en] Productivity Tools (11-11-2023)</a>
             </div>
+            <div class="article-item">
+                <a href="src/articles/course-259.html">[de] Kurs M259 "Machine Learning" - Neue Dokumentation (26-10-2022)</a>
+            </div>
+            <div class="article-item">
+                <a href="src/articles/course-216.html">[de] Kurs M216 "Internet of Everything" - Neue Dokumentation (06-11-2022)</a>
+            </div>
         </section>
         <section id="contact">
             <h2>Contact Me</h2>
